<resources>
    <string name="app_name">LMA</string>
    <string name="action_settings">Settings</string>
    <string name="e_mail">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loan_details">Loan Details</string>
    <string name="search">Search</string>
    <string name="date_range">Date Range</string>
    <string name="main_menu">Main Menu</string>
    <string name="log_off">LOG OFF</string>
    <string name="loan_list">Loan List</string>
    <string name="action_refresh">Refresh</string>
    <string name="amount">Amount</string>
    <string name="loan_id">Loan Id</string>
    <string name="date_format">mm/dd/yyyy</string>
    <string name="interest_percent">Interest%</string>
    <string name="interest">Interest</string>
    <string name="customer_name">Name</string>
    <string name="phone">Phone</string>
    <string name="difference">Difference</string>
    <string name="settlement_amount">Paid Amount</string>
    <string name="settlement_date">Paid Date</string>
    <string name="select_settlement_date">Select Paid Date</string>
    <string name="save">SAVE</string>
    <string name="from_date">From date</string>
    <string name="from_date_calendar">From date Calendar</string>
    <string name="to_date">To date Calendar</string>
    <string name="to_date_calendar">To date</string>
    <string name="search_header">Please choose your search parameter</string>
    <string name="customer_email">Email</string>
    <string name="error_message">Error Retrieving data</string>
    <string name="alert_message">Alert!!\n Entered info will be lost on Exit. Hit \"Save\" button to save info and \"Don\'t Save\" to exit without saving the info</string>
    <string name="loan_creation_error_message">Error creating new loan id</string>
    <string name="go_back">GO BACK</string>
    <string name="dismiss">DISMISS</string>
    <string name="dont_save">Don\'t Save</string>
    <string name="enter_loan_date">Enter Loan Date</string>
    <string name="enter_paid_date">Enter Paid Date</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_interest">Enter Interest</string>
    <string name="enter_paid_amount">Enter Paid Amount</string>
    <string name="error_loan_not_found">Loan details not found for the search</string>
    <string name="net_amount_widget">Net amount : $ %d</string>
    <string name="settlement_amount_widget">Paid amount : %d</string>
    <string name="lended_amount_widget">Loan Amount : %d</string>
    <string name="sign_in_error">Sign in Error, please Try Again</string>
    <string name="error_invalid_selection">Invalid Selection</string>
    <string name="error_enter_date">Enter Atleast One date</string>
    <string name="error_enter_loan_id">Enter Loan Id</string>
</resources>
