<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="top|center" android:paddingTop="30dp">

    <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:hint="@string/e_mail"
                android:id="@+id/login_email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:id="@+id/login_password"
                android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:id="@+id/login_button"
            android:textColor="@color/colorAccent"
            android:layout_marginBottom="10dp"/>
    <com.firebase.ui.auth.util.ui.BaselineTextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>